<resources>
    <string name="app_name">KlepetChat</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>


    <string name="Chats">Чаты</string>
    <string name="Auth">Авторизация</string>
    <string name="Phone">Телефон</string>
    <string name="Password">Пароль</string>
    <string name="Surname">Фамилия</string>
    <string name="Name">Имя</string>
    <string name="Enter">Войти</string>
    <string name="Required">Обязательно</string>
    <string name="NotAccount">Нет аккаунта</string>
    <string name="Register">Регистрация</string>
    <string name="RegisterMe">Регистрация</string>
    <string name="BackRegisterBtn">Back</string>
    <string name="I_forgot_My_Password">Я забыл пароль</string>

    <string name="Empty"> </string>
    <string name="sendMessage">Сообщение</string>
    <string name="aboutMe">О себе...</string>
    <string name="add_group">Создать группу</string>
    <string name="name_group">Название группы</string>
    <string name="info">Информация</string>
    <string name="Nickname">Имя пользователя</string>
    <string name="example_about_me">Любые подробности, например возраст, род занятий или город.\nПример: 20 лет, программист из Санкт-Петербурга.</string>
    <string name="example_nickname">С помощью имени пользователя другие люди смогут связаться с Вами в KlepetChat, не зная Вашего телефона.</string>
    <string name="setting">Настройки</string>
    <string name="add_contact">Контакты</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="help">Поддержка</string>
    <string name="exit">Выйти</string>
    <string name="title_klepet_chat">KlepetChat</string>
    <string name="NewPhone">Новый телефон</string>
    <string name="ValidatePassword">Подтвердите пароль</string>
    <string name="search">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="JoinChat">Присоединиться</string>
    <string name="deleted_chat">Удалить чат</string>
    <string name="delete_message">Удалить сообщения</string>
    <string name="delete_akkaunt">Удалить аккаунт</string>
    <string name="add_favorites">Избранное</string>
    <string name="exit_from_chat">Выйти из чата</string>
    <string name="participant">Участники</string>
    <string name="add_chat">Создание чата</string>
</resources>