<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_group"
            android:icon="@drawable/ic_add_groups"
            android:title="@string/add_group"/>
        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_person_contact"
            android:title="@string/add_contact"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_phone"
            android:title="@string/help"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"/>
        </menu>
    </item>
</menu>